- Fixed: Crash on startup with Android Lollipop (and maybe higher)
- Fixed: Prevent crash when opening qu conversion page (#708)
- Fixed: Glitch with large top margin on recipe grid layout (#696)
- Fixed: Saving QU conversion failed if conversion existed already in other product (#707, #682)
- Fixed: Disabled features with Home Assistant add-on were not disabled in app (#713)

## 3.2.1

- Fixed: Random crash with no reason (#699)
- Fixed: Prevent another crash after reopening app from background (#697)
- Fixed: Product pictures not loading (with Home Assistant or not, we don't know) (#700)
- Fixed: Overview and stock page not populated after theme change or other cases (#692, #695)
- Fixed: Crash on stock page with opened product overview sheet in some cases (#673)

## 3.2.0

- New: Catalan, Estonian and Portuguese (Brazil) translations. Many thanks for your contributions!
- New: Product pictures on stock & master products list if at least one picture is available (#536)
- New: Grid layout for recipes list
- New: Many pages of the app now can be opened using NFC tags with URI (thanks @codesalatdev) (#676)
- Improved: In-app help now contains a list of the supported URIs that can be used for Intents
- Improved: Menu button in bottom app bar now can be hidden in behavior settings
- Improved: Scrollbar is shown in scrollable lists
- Improved: Better logic on login page for receiving Home Assistant session token (#670)
- Improved: Logging on login page for Home Assistant connection (#670)
- Improved: Moved shortcuts option from behavior to appearance settings
- Improved: Added option for quick mode state when using scan button on overview page (#540, #648)
- Improved: Added separate buttons for shopping mode and new task to overview start page
- Improved: Updated plural rules for quantity units in all project languages from Transifex
- Improved: Better indication of invalid fields on unit conversion edit page (#682)
- Improved: themed icon support for app shortcuts